src/TripAPL_parser.java
/* Generated By:JavaCC: Do not edit this line. TripAPL_parser.java */
import java.util.ArrayList;
import java.io.*;
import alice.tuprolog.*;
public class TripAPL_parser implements TripAPL_parserConstants {
    private static int ID = 0;
  static public Agent compile(String filename) throws FileNotFoundException, ParseException {
    return new TripAPL_parser(new FileInputStream(filename)).Program(ID++);
  }

  final public Agent Program(int id) throws ParseException {
    Token t;
    String name;
    BeliefBase bb = null;
    CapabilityBase cb = null;
    GoalBase gb = null;
    PlanBase pb = null;
    GoalPlanningRuleBase gp = null;
    PlanRevisionRuleBase pr = null;
    jj_consume_token(NAME);
    jj_consume_token(COLON);
    if (jj_2_1(3)) {
      t = jj_consume_token(VAR);
    } else if (jj_2_2(3)) {
      t = jj_consume_token(VAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                                            name  = t.image;
    jj_consume_token(BELBASE);
    jj_consume_token(COLON);
    bb = beliefs();
    jj_consume_token(GOALBASE);
    jj_consume_token(COLON);
    gb = goals();
    jj_consume_token(CAPBASE);
    jj_consume_token(COLON);
    cb = capbilities();
    jj_consume_token(PLANBASE);
    jj_consume_token(COLON);
    pb = plans();
    jj_consume_token(GP_RULES);
    jj_consume_token(COLON);
    gp = g_rules();
    jj_consume_token(PR_RULES);
    jj_consume_token(COLON);
    pr = p_rules();
     {if (true) return new Agent(name,bb,gb,pb,gp,pr,cb,id);}
    throw new Error("Missing return statement in function");
  }

  final public CapabilityBase capbilities() throws ParseException {
    Capability buffer;
    ArrayList<Capability> result = new ArrayList<Capability>();
    label_1:
    while (true) {
      if (jj_2_3(3)) {
        ;
      } else {
        break label_1;
      }
      buffer = capability();
                           result.add(buffer);
    }
     {if (true) return new CapabilityBase(result);}
    throw new Error("Missing return statement in function");
  }

  final public Capability capability() throws ParseException {
    Atom t;
    Query precondition;
    String name;
    Token nameT;
    Literal literal;
    ArrayList<Literal> postcondition;
    ArrayList<String> arguments = new ArrayList<String>();
    jj_consume_token(LBRACE);
    precondition = query();
    jj_consume_token(RBRACE);
    nameT = jj_consume_token(VAL);
                                                            name = nameT.image;
    jj_consume_token(LPAR);
    if (jj_2_4(3)) {
      t = atom();
                                                                                                     arguments.add(t.toString());
    } else {
      ;
    }
    label_2:
    while (true) {
      if (jj_2_5(3)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      t = atom();
                                                                                                                                                          arguments.add(t.toString());
    }
    jj_consume_token(RPAR);
    jj_consume_token(LBRACE);
    postcondition = literals();
    jj_consume_token(RBRACE);
     {if (true) return new Capability(precondition, name, arguments, postcondition);}
    throw new Error("Missing return statement in function");
  }

  final public BeliefBase beliefs() throws ParseException {
    ArrayList<GpredClause> bs = new ArrayList<GpredClause>();
    ArrayList<String> hs = new ArrayList<String>();
    StringBuilder horn;
    GpredClause bufferG;
    VpredClause bufferV;
    Literal bufferL;
    label_3:
    while (true) {
      if (jj_2_6(3)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_12(3)) {
        bufferG = gpredclause();
        jj_consume_token(PROLOGEND);
                                           bs.add(bufferG);
      } else if (jj_2_13(3)) {
        jj_consume_token(41);
                      horn = new StringBuilder();
        bufferL = literal();
                                                                         horn.append(bufferL.toString());
        jj_consume_token(GIVES);
                                                                                                                    horn.append(" :- ");
        if (jj_2_7(3)) {
          jj_consume_token(PNOT);
                                                                                                                                                   horn.append("\u005c\u005c+ ");
        } else {
          ;
        }
        bufferL = literal();
                                                                                                                                                                                                horn.append(bufferL.toString());
        label_4:
        while (true) {
          if (jj_2_8(3)) {
            ;
          } else {
            break label_4;
          }
          if (jj_2_9(3)) {
            jj_consume_token(COMMA);
                                                                                                                                                                                                                                             horn.append(", ");
          } else if (jj_2_10(3)) {
            jj_consume_token(SEMICOL);
                                                                                                                                                                                                                                                                            horn.append("; ");
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          if (jj_2_11(3)) {
            jj_consume_token(PNOT);
                                                                                                                                                                                                                                                                                                         horn.append("\u005c\u005c+ ");
          } else {
            ;
          }
          bufferL = literal();
                                                                                                                                                                                                                                                                                                                                                      horn.append(bufferL.toString());
        }
        jj_consume_token(PROLOGEND);
                                                                                                                                                                                                                                                                                                                                                                                                       hs.add(horn.toString());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new BeliefBase(hs,bs);}
    throw new Error("Missing return statement in function");
  }

  final public GoalBase goals() throws ParseException {
    Goal buffer;
    ArrayList<Goal> result = new ArrayList<Goal>();
    if (jj_2_15(3)) {
      buffer = goal();
                      result.add(buffer);
      label_5:
      while (true) {
        if (jj_2_14(3)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(COMMA);
        buffer = goal();
                                                                     result.add(buffer);
      }
    } else {
      ;
    }
     {if (true) return new GoalBase(result);}
    throw new Error("Missing return statement in function");
  }

  final public Goal goal() throws ParseException {
    GpredClause buffer;
    ArrayList<GpredClause> component = new ArrayList<GpredClause>();
    buffer = gpredclause();
                            component.add(buffer);
    label_6:
    while (true) {
      if (jj_2_16(3)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(AND);
      buffer = gpredclause();
                                                                                   component.add(buffer);
    }
     {if (true) return new Goal(component);}
    throw new Error("Missing return statement in function");
  }

  final public GoalPlanningRule g_rule() throws ParseException {
    Goal goal0 = null;
    Query condition;
    SeqPlan plan0;
    if (jj_2_17(3)) {
      jj_consume_token(LBRACE);
      goal0 = goal();
      jj_consume_token(RBRACE);
    } else {
      ;
    }
    jj_consume_token(IMPLY);
    condition = query();
    jj_consume_token(VBAR);
    jj_consume_token(LBRACE);
    plan0 = seqPlan();
    jj_consume_token(RBRACE);
                                                                                                             {if (true) return new GoalPlanningRule(goal0,condition,plan0);}
    throw new Error("Missing return statement in function");
  }

  final public PlanRevisionRule p_rule() throws ParseException {
    SeqPlan oldPlan;
    Query condition;
    SeqPlan newPlan;
    jj_consume_token(LBRACE);
    oldPlan = seqPlan();
    jj_consume_token(RBRACE);
    jj_consume_token(IMPLY);
    condition = query();
    jj_consume_token(VBAR);
    jj_consume_token(LBRACE);
    newPlan = seqPlan();
    jj_consume_token(RBRACE);
                                                                                                                {if (true) return new PlanRevisionRule(oldPlan,newPlan,condition);}
    throw new Error("Missing return statement in function");
  }

  final public GoalPlanningRuleBase g_rules() throws ParseException {
    ArrayList<GoalPlanningRule> gs = new ArrayList<GoalPlanningRule>();
    GoalPlanningRule g;
    label_7:
    while (true) {
      if (jj_2_18(3)) {
        ;
      } else {
        break label_7;
      }
      g = g_rule();
                   gs.add(g);
    }
     {if (true) return new GoalPlanningRuleBase(gs);}
    throw new Error("Missing return statement in function");
  }

  final public PlanRevisionRuleBase p_rules() throws ParseException {
    ArrayList<PlanRevisionRule> ps = new ArrayList<PlanRevisionRule>();
    PlanRevisionRule p;
    label_8:
    while (true) {
      if (jj_2_19(3)) {
        ;
      } else {
        break label_8;
      }
      p = p_rule();
                   ps.add(p);
    }
     {if (true) return new PlanRevisionRuleBase(ps);}
    throw new Error("Missing return statement in function");
  }

  final public PlanBase plans() throws ParseException {
    Plan buffer;
    ArrayList<Plan> plans = new ArrayList<Plan>();
    label_9:
    while (true) {
      if (jj_2_20(3)) {
        ;
      } else {
        break label_9;
      }
      buffer = plan();
                      plans.add(buffer);
    }
     {if (true) return new PlanBase(plans);}
    throw new Error("Missing return statement in function");
  }

  final public Plan plan() throws ParseException {
    SeqPlan plan;
    jj_consume_token(LBRACE);
    plan = seqPlan();
    jj_consume_token(RBRACE);
                                        {if (true) return new Plan(plan);}
    throw new Error("Missing return statement in function");
  }

  final public SeqPlan seqPlan() throws ParseException {
    BasicPlan buffer;
    ArrayList<BasicPlan> components = new ArrayList<BasicPlan>();
    label_10:
    while (true) {
      buffer = basicplan();
                            components.add(buffer);
      jj_consume_token(SEMICOL);
      if (jj_2_21(3)) {
        ;
      } else {
        break label_10;
      }
    }
                                                                  {if (true) return new SeqPlan(components);}
    throw new Error("Missing return statement in function");
  }

  final public BasicPlan basicplan() throws ParseException {
    Query testbuffer;
    ArrayList<Atom> arguments = new ArrayList<Atom>();
    ArrayList<BasicPlan> components = new ArrayList<BasicPlan>();
    BasicPlan buffer;
    VpredClause content;
    VpredClause reply;
    Atom argbuffer;
    Token t;
    SeqPlan ifPlan;
    SeqPlan elsePlan;
    if (jj_2_27(3)) {
      jj_consume_token(Env);
      jj_consume_token(LPAR);
      if (jj_2_23(3)) {
        argbuffer = atom();
                                        arguments.add(argbuffer);
        label_11:
        while (true) {
          if (jj_2_22(3)) {
            ;
          } else {
            break label_11;
          }
          jj_consume_token(COMMA);
          argbuffer = atom();
                                                                                                arguments.add(argbuffer);
        }
      } else {
        ;
      }
      jj_consume_token(RPAR);
                                                                                                                                       {if (true) return new EnvAction(arguments);}
    } else if (jj_2_28(3)) {
      jj_consume_token(TEST);
      testbuffer = query();
                                    {if (true) return new TestAction(testbuffer);}
    } else if (jj_2_29(3)) {
      jj_consume_token(SEND);
      jj_consume_token(LPAR);
      t = jj_consume_token(VAL);
      jj_consume_token(COMMA);
      argbuffer = atom();
      jj_consume_token(COMMA);
      content = vpredclause();
      jj_consume_token(COMMA);
      reply = vpredclause();
      jj_consume_token(RPAR);
                                                                                                                {if (true) return new SendAction(t.image, argbuffer.toString(), content, reply);}
    } else if (jj_2_30(3)) {
      t = jj_consume_token(VAL);
      jj_consume_token(LPAR);
      if (jj_2_25(3)) {
        argbuffer = atom();
                                               arguments.add(argbuffer);
        label_12:
        while (true) {
          if (jj_2_24(3)) {
            ;
          } else {
            break label_12;
          }
          jj_consume_token(COMMA);
          argbuffer = atom();
                                                                                                       arguments.add(argbuffer);
        }
      } else {
        ;
      }
      jj_consume_token(RPAR);
                                                                                                                                              {if (true) return new CapAction(t.image, arguments);}
    } else if (jj_2_31(3)) {
      jj_consume_token(WHILE);
      jj_consume_token(LPAR);
      testbuffer = query();
      jj_consume_token(RPAR);
      jj_consume_token(LBRACE);
      label_13:
      while (true) {
        buffer = basicplan();
                                                                                  components.add(buffer);
        jj_consume_token(SEMICOL);
        if (jj_2_26(3)) {
          ;
        } else {
          break label_13;
        }
      }
      jj_consume_token(RBRACE);
                                                                                                                                 {if (true) return new WhilePlan(components, testbuffer);}
    } else if (jj_2_32(3)) {
      jj_consume_token(IF);
      jj_consume_token(LPAR);
      testbuffer = query();
      jj_consume_token(RPAR);
      jj_consume_token(LBRACE);
      ifPlan = seqPlan();
      jj_consume_token(RBRACE);
      jj_consume_token(ELSE);
      jj_consume_token(LBRACE);
      elsePlan = seqPlan();
      jj_consume_token(RBRACE);
                                                                                                                                   {if (true) return new IfPlan(ifPlan, elsePlan, testbuffer);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Literal> literals() throws ParseException {
    Literal buffer;
    ArrayList<Literal> result = new ArrayList<Literal>();
    buffer = literal();
                        result.add(buffer);
    label_14:
    while (true) {
      if (jj_2_33(3)) {
        ;
      } else {
        break label_14;
      }
      jj_consume_token(COMMA);
      buffer = literal();
                                                                          result.add(buffer);
    }
     {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public Query query() throws ParseException {
    Query sub0;
    Query sub1;
    boolean isOr;
    if (jj_2_36(3)) {
      sub0 = singlequery();
                           {if (true) return sub0;}
    } else if (jj_2_37(3)) {
      jj_consume_token(LPAR);
      sub0 = query();
      if (jj_2_34(3)) {
        jj_consume_token(OR);
        sub1 = query();
        jj_consume_token(RPAR);
                                                           {if (true) return new wffBinary(true, sub0, sub1);}
      } else if (jj_2_35(3)) {
        jj_consume_token(AND);
        sub1 = query();
        jj_consume_token(RPAR);
                                  {if (true) return new wffBinary(false, sub0, sub1);}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Query singlequery() throws ParseException {
    Query query;
    if (jj_2_38(3)) {
      query = truequery();
                          {if (true) return query;}
    } else if (jj_2_39(3)) {
      query = literal();
                                                                {if (true) return query;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public TrueQuery truequery() throws ParseException {
    jj_consume_token(TRUE);
            {if (true) return new TrueQuery();}
    throw new Error("Missing return statement in function");
  }

  final public Literal literal() throws ParseException {
    VpredClause clause;
    if (jj_2_40(3)) {
      clause = vpredclause();
                             {if (true) return new Literal(false, clause);}
    } else if (jj_2_41(3)) {
      jj_consume_token(NOT);
      clause = vpredclause();
                                                                                                   {if (true) return new Literal(true, clause);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public GpredClause gpredclause() throws ParseException {
    Token t;
    ArrayList<GpredClause> arguments = new ArrayList();
    GpredClause buffer;
    t = jj_consume_token(VAL);
    jj_consume_token(LPAR);
    if (jj_2_42(3)) {
      buffer = gsubClause();
                                             arguments.add(buffer);
    } else {
      ;
    }
    label_15:
    while (true) {
      if (jj_2_43(3)) {
        ;
      } else {
        break label_15;
      }
      jj_consume_token(COMMA);
      buffer = gsubClause();
                                                                                                        arguments.add(buffer);
    }
    jj_consume_token(RPAR);
     {if (true) return new GpredClause(t.image, arguments);}
    throw new Error("Missing return statement in function");
  }

  final public GpredClause gsubClause() throws ParseException {
    Atom predicate;
    ArrayList<GpredClause> arguments = new ArrayList();
    GpredClause buffer;
    predicate = val();
    if (jj_2_46(3)) {
      jj_consume_token(LPAR);
      if (jj_2_44(3)) {
        buffer = gsubClause();
                                                   arguments.add(buffer);
      } else {
        ;
      }
      label_16:
      while (true) {
        if (jj_2_45(3)) {
          ;
        } else {
          break label_16;
        }
        jj_consume_token(COMMA);
        buffer = gsubClause();
                                                                                                              arguments.add(buffer);
      }
      jj_consume_token(RPAR);
                                                                                                                                             {if (true) return new GpredClause(predicate.toString(),arguments);}
    } else {
      ;
    }
                                                                                                                                                                                                          {if (true) return predicate;}
    throw new Error("Missing return statement in function");
  }

  final public VpredClause vpredclause() throws ParseException {
    Token t;
    ArrayList<GpredClause> arguments = new ArrayList();
    GpredClause buffer;
    t = jj_consume_token(VAL);
    jj_consume_token(LPAR);
    if (jj_2_47(3)) {
      buffer = vsubClause();
                                             arguments.add(buffer);
    } else {
      ;
    }
    label_17:
    while (true) {
      if (jj_2_48(3)) {
        ;
      } else {
        break label_17;
      }
      jj_consume_token(COMMA);
      buffer = vsubClause();
                                                                                                        arguments.add(buffer);
    }
    jj_consume_token(RPAR);
     {if (true) return new VpredClause(t.image, arguments);}
    throw new Error("Missing return statement in function");
  }

  final public GpredClause vsubClause() throws ParseException {
    Atom predicate;
    ArrayList<GpredClause> arguments = new ArrayList();
    GpredClause buffer;
    if (jj_2_52(3)) {
      predicate = val();
      if (jj_2_51(3)) {
        jj_consume_token(LPAR);
        if (jj_2_49(3)) {
          buffer = vsubClause();
                                                    arguments.add(buffer);
        } else {
          ;
        }
        label_18:
        while (true) {
          if (jj_2_50(3)) {
            ;
          } else {
            break label_18;
          }
          jj_consume_token(COMMA);
          buffer = vsubClause();
                                                                                                               arguments.add(buffer);
        }
        jj_consume_token(RPAR);
                                                                                                                                              {if (true) return new GpredClause(predicate.toString(),arguments);}
      } else {
        ;
      }
                                                                                                                                                                                                          {if (true) return predicate;}
    } else if (jj_2_53(3)) {
      predicate = var();
                                                                                                                                                                                                                                                    {if (true) return predicate;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Atom val() throws ParseException {
    Token t;
    t = jj_consume_token(VAL);
              {if (true) return new Atom(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public Atom var() throws ParseException {
    Token t;
    t = jj_consume_token(VAR);
              {if (true) return new Atom(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public Atom atom() throws ParseException {
    Atom a;
    if (jj_2_54(3)) {
      a = var();
                {if (true) return a;}
    } else if (jj_2_55(3)) {
      a = val();
                                         {if (true) return a;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }
